# Django-React-Mongo

NatureCounter/: .gitignore  package-lock.json  package.json
NatureCounter/DjangoBackend/: manage.py  package-lock.json  pyproject.toml  requirements.txt
NatureCounter/DjangoBackend/modules/account/: apps.py
NatureCounter/DjangoBackend/modules/article/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
NatureCounter/DjangoBackend/modules/article/migrations/: 0001_initial.py
NatureCounter/DjangoBackend/modules/home/: admin.py  apps.py  models.py
NatureCounter/DjangoBackend/modules/home/migrations/: 0001_initial.py
NatureCounter/DjangoBackend/modules/journal/: admin.py  apps.py  models.py  urls.py
NatureCounter/DjangoBackend/modules/journal/migrations/: 0001_initial.py
NatureCounter/DjangoBackend/naturecounter/: asgi.py  settings.py  urls.py  wsgi.py
NatureCounter/nature-counter/: App.js  app.json  package-lock.json  package.json
NatureCounter/nature-counter/android/: settings.gradle
NatureCounter/nature-counter/android/app/: build.gradle
NatureCounter/nature-counter/components/Card/: ArticleCard.js
NatureCounter/nature-counter/components/HomeScreen/: Article.js
NatureCounter/nature-counter/components/Logo/: Logo.js
NatureCounter/nature-counter/components/Row/: RowButton.js
NatureCounter/nature-counter/components/Section/: OverviewSection.js  index.js
NatureCounter/nature-counter/components/Utilities/: commonStyle.js  styles.js
NatureCounter/nature-counter/helpers/: baseUrl.js
NatureCounter/nature-counter/ios/: Podfile
(+10 files in other folders)
